bug 477572 - Properly support indeterminate checkboxes with the right a11y notifications, r=surkov, sr=roc